Baselines/GNN-explain/smilesparse/smilesParser.py
# Generated from smiles.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class smilesParser ( Parser ):

    grammarFileName = "smiles.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'B'", "'C'", "'N'", "'O'", "'S'", 
                     "'P'", "'F'", "'Cl'", "'Br'", "'I'", "'b'", "'c'", 
                     "'n'", "'o'", "'s'", "'p'", "'['", "']'", "'H'", "'He'", 
                     "'Li'", "'Be'", "'Ne'", "'Na'", "'Mg'", "'Al'", "'Si'", 
                     "'Ar'", "'K'", "'Ca'", "'Ti'", "'V'", "'Cr'", "'Mn'", 
                     "'Fe'", "'Co'", "'Ni'", "'Cu'", "'Zn'", "'Ga'", "'Ge'", 
                     "'As'", "'Se'", "'Kr'", "'Rb'", "'Sr'", "'Y'", "'Zr'", 
                     "'Nb'", "'Mo'", "'Tc'", "'Ru'", "'Rh'", "'Pd'", "'Ag'", 
                     "'Cd'", "'In'", "'Sn'", "'Sb'", "'Te'", "'Xe'", "'Cs'", 
                     "'Ba'", "'Hf'", "'Ta'", "'W'", "'Re'", "'Os'", "'Ir'", 
                     "'Pt'", "'Au'", "'Hg'", "'Tl'", "'Pb'", "'Bi'", "'Po'", 
                     "'At'", "'Rn'", "'Fr'", "'Ra'", "'Rf'", "'Db'", "'Sg'", 
                     "'Bh'", "'Hs'", "'Mt'", "'Ds'", "'Rg'", "'La'", "'Ce'", 
                     "'Pr'", "'Nd'", "'Pm'", "'Sm'", "'Eu'", "'Gd'", "'Tb'", 
                     "'Dy'", "'Ho'", "'Er'", "'Tm'", "'Yb'", "'Lu'", "'Ac'", 
                     "'Th'", "'Pa'", "'U'", "'Np'", "'Pu'", "'Am'", "'Cm'", 
                     "'Bk'", "'Cf'", "'Es'", "'Fm'", "'Md'", "'No'", "'Lr'", 
                     "'se'", "'as'", "'@'", "'@@'", "'@TH1'", "'@TH2'", 
                     "'@AL1'", "'@AL2'", "'@SP1'", "'@SP2'", "'@SP3'", "'@TB1'", 
                     "'@TB2'", "'@TB3'", "'@TB4'", "'@TB5'", "'@TB6'", "'@TB7'", 
                     "'@TB8'", "'@TB9'", "'@TB10'", "'@TB11'", "'@TB12'", 
                     "'@TB13'", "'@TB14'", "'@TB15'", "'@TB16'", "'@TB17'", 
                     "'@TB18'", "'@TB19'", "'@TB20'", "'@TB21'", "'@TB22'", 
                     "'@TB23'", "'@TB24'", "'@TB25'", "'@TB26'", "'@TB27'", 
                     "'@TB28'", "'@TB29'", "'@TB30'", "'@OH1'", "'@OH2'", 
                     "'@OH3'", "'@OH4'", "'@OH5'", "'@OH6'", "'@OH7'", "'@OH8'", 
                     "'@OH9'", "'@OH10'", "'@OH11'", "'@OH12'", "'@OH13'", 
                     "'@OH14'", "'@OH15'", "'@OH16'", "'@OH17'", "'@OH18'", 
                     "'@OH19'", "'@OH20'", "'@OH21'", "'@OH22'", "'@OH23'", 
                     "'@OH24'", "'@OH25'", "'@OH26'", "'@OH27'", "'@OH28'", 
                     "'@OH29'", "'@OH30'", "'-'", "'+'", "'--'", "'++'", 
                     "':'", "'='", "'#'", "'$'", "'/'", "'\\'", "'%'", "'('", 
                     "')'", "'.'", "'\r'", "'\n'", "' '", "<INVALID>", "'\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DOT", "LINEFEED", "CARRIAGE_RETURN", "SPACE", "DIGIT", 
                      "TAB" ]

    RULE_smiles = 0
    RULE_atom = 1
    RULE_aliphatic_organic = 2
    RULE_aromatic_organic = 3
    RULE_bracket_atom = 4
    RULE_symbol = 5
    RULE_isotope = 6
    RULE_element_symbols = 7
    RULE_aromatic_symbols = 8
    RULE_chiral = 9
    RULE_hcount = 10
    RULE_charge = 11
    RULE_class_ = 12
    RULE_bond = 13
    RULE_ringbond = 14
    RULE_branchedAtom = 15
    RULE_branch = 16
    RULE_chain = 17
    RULE_terminator = 18

    ruleNames =  [ "smiles", "atom", "aliphatic_organic", "aromatic_organic", 
                   "bracket_atom", "symbol", "isotope", "element_symbols", 
                   "aromatic_symbols", "chiral", "hcount", "charge", "class_", 
                   "bond", "ringbond", "branchedAtom", "branch", "chain", 
                   "terminator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    T__145=146
    T__146=147
    T__147=148
    T__148=149
    T__149=150
    T__150=151
    T__151=152
    T__152=153
    T__153=154
    T__154=155
    T__155=156
    T__156=157
    T__157=158
    T__158=159
    T__159=160
    T__160=161
    T__161=162
    T__162=163
    T__163=164
    T__164=165
    T__165=166
    T__166=167
    T__167=168
    T__168=169
    T__169=170
    T__170=171
    T__171=172
    T__172=173
    T__173=174
    T__174=175
    T__175=176
    T__176=177
    T__177=178
    T__178=179
    T__179=180
    T__180=181
    T__181=182
    T__182=183
    T__183=184
    T__184=185
    T__185=186
    T__186=187
    T__187=188
    T__188=189
    T__189=190
    T__190=191
    T__191=192
    T__192=193
    T__193=194
    T__194=195
    T__195=196
    T__196=197
    T__197=198
    T__198=199
    T__199=200
    T__200=201
    T__201=202
    T__202=203
    DOT=204
    LINEFEED=205
    CARRIAGE_RETURN=206
    SPACE=207
    DIGIT=208
    TAB=209

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SmilesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chain(self):
            return self.getTypedRuleContext(smilesParser.ChainContext,0)


        def terminator(self):
            return self.getTypedRuleContext(smilesParser.TerminatorContext,0)


        def getRuleIndex(self):
            return smilesParser.RULE_smiles

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmiles" ):
                listener.enterSmiles(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmiles" ):
                listener.exitSmiles(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmiles" ):
                return visitor.visitSmiles(self)
            else:
                return visitor.visitChildren(self)




    def smiles(self):

        localctx = smilesParser.SmilesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_smiles)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.chain(0)
            self.state = 39
            self.terminator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return smilesParser.RULE_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BaseAtomContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a smilesParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bracket_atom(self):
            return self.getTypedRuleContext(smilesParser.Bracket_atomContext,0)

        def aliphatic_organic(self):
            return self.getTypedRuleContext(smilesParser.Aliphatic_organicContext,0)

        def aromatic_organic(self):
            return self.getTypedRuleContext(smilesParser.Aromatic_organicContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseAtom" ):
                listener.enterBaseAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseAtom" ):
                listener.exitBaseAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseAtom" ):
                return visitor.visitBaseAtom(self)
            else:
                return visitor.visitChildren(self)


    class WildcardAtomContext(AtomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a smilesParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWildcardAtom" ):
                listener.enterWildcardAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWildcardAtom" ):
                listener.exitWildcardAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWildcardAtom" ):
                return visitor.visitWildcardAtom(self)
            else:
                return visitor.visitChildren(self)



    def atom(self):

        localctx = smilesParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_atom)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [smilesParser.T__17]:
                localctx = smilesParser.BaseAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.bracket_atom()
                pass
            elif token in [smilesParser.T__1, smilesParser.T__2, smilesParser.T__3, smilesParser.T__4, smilesParser.T__5, smilesParser.T__6, smilesParser.T__7, smilesParser.T__8, smilesParser.T__9, smilesParser.T__10]:
                localctx = smilesParser.BaseAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.aliphatic_organic()
                pass
            elif token in [smilesParser.T__11, smilesParser.T__12, smilesParser.T__13, smilesParser.T__14, smilesParser.T__15, smilesParser.T__16]:
                localctx = smilesParser.BaseAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.aromatic_organic()
                pass
            elif token in [smilesParser.T__0]:
                localctx = smilesParser.WildcardAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.match(smilesParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aliphatic_organicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return smilesParser.RULE_aliphatic_organic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliphatic_organic" ):
                listener.enterAliphatic_organic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliphatic_organic" ):
                listener.exitAliphatic_organic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAliphatic_organic" ):
                return visitor.visitAliphatic_organic(self)
            else:
                return visitor.visitChildren(self)




    def aliphatic_organic(self):

        localctx = smilesParser.Aliphatic_organicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_aliphatic_organic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << smilesParser.T__1) | (1 << smilesParser.T__2) | (1 << smilesParser.T__3) | (1 << smilesParser.T__4) | (1 << smilesParser.T__5) | (1 << smilesParser.T__6) | (1 << smilesParser.T__7) | (1 << smilesParser.T__8) | (1 << smilesParser.T__9) | (1 << smilesParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aromatic_organicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return smilesParser.RULE_aromatic_organic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAromatic_organic" ):
                listener.enterAromatic_organic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAromatic_organic" ):
                listener.exitAromatic_organic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAromatic_organic" ):
                return visitor.visitAromatic_organic(self)
            else:
                return visitor.visitChildren(self)




    def aromatic_organic(self):

        localctx = smilesParser.Aromatic_organicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aromatic_organic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << smilesParser.T__11) | (1 << smilesParser.T__12) | (1 << smilesParser.T__13) | (1 << smilesParser.T__14) | (1 << smilesParser.T__15) | (1 << smilesParser.T__16))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bracket_atomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(smilesParser.SymbolContext,0)


        def isotope(self):
            return self.getTypedRuleContext(smilesParser.IsotopeContext,0)


        def chiral(self):
            return self.getTypedRuleContext(smilesParser.ChiralContext,0)


        def hcount(self):
            return self.getTypedRuleContext(smilesParser.HcountContext,0)


        def charge(self):
            return self.getTypedRuleContext(smilesParser.ChargeContext,0)


        def class_(self):
            return self.getTypedRuleContext(smilesParser.Class_Context,0)


        def getRuleIndex(self):
            return smilesParser.RULE_bracket_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracket_atom" ):
                listener.enterBracket_atom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracket_atom" ):
                listener.exitBracket_atom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBracket_atom" ):
                return visitor.visitBracket_atom(self)
            else:
                return visitor.visitChildren(self)




    def bracket_atom(self):

        localctx = smilesParser.Bracket_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bracket_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(smilesParser.T__17)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==smilesParser.DIGIT:
                self.state = 52
                self.isotope()


            self.state = 55
            self.symbol()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 122)) & ~0x3f) == 0 and ((1 << (_la - 122)) & ((1 << (smilesParser.T__121 - 122)) | (1 << (smilesParser.T__122 - 122)) | (1 << (smilesParser.T__123 - 122)) | (1 << (smilesParser.T__124 - 122)) | (1 << (smilesParser.T__125 - 122)) | (1 << (smilesParser.T__126 - 122)) | (1 << (smilesParser.T__127 - 122)) | (1 << (smilesParser.T__128 - 122)) | (1 << (smilesParser.T__129 - 122)) | (1 << (smilesParser.T__130 - 122)) | (1 << (smilesParser.T__131 - 122)) | (1 << (smilesParser.T__132 - 122)) | (1 << (smilesParser.T__133 - 122)) | (1 << (smilesParser.T__134 - 122)) | (1 << (smilesParser.T__135 - 122)) | (1 << (smilesParser.T__136 - 122)) | (1 << (smilesParser.T__137 - 122)) | (1 << (smilesParser.T__138 - 122)) | (1 << (smilesParser.T__139 - 122)) | (1 << (smilesParser.T__140 - 122)) | (1 << (smilesParser.T__141 - 122)) | (1 << (smilesParser.T__142 - 122)) | (1 << (smilesParser.T__143 - 122)) | (1 << (smilesParser.T__144 - 122)) | (1 << (smilesParser.T__145 - 122)) | (1 << (smilesParser.T__146 - 122)) | (1 << (smilesParser.T__147 - 122)) | (1 << (smilesParser.T__148 - 122)) | (1 << (smilesParser.T__149 - 122)) | (1 << (smilesParser.T__150 - 122)) | (1 << (smilesParser.T__151 - 122)) | (1 << (smilesParser.T__152 - 122)) | (1 << (smilesParser.T__153 - 122)) | (1 << (smilesParser.T__154 - 122)) | (1 << (smilesParser.T__155 - 122)) | (1 << (smilesParser.T__156 - 122)) | (1 << (smilesParser.T__157 - 122)) | (1 << (smilesParser.T__158 - 122)) | (1 << (smilesParser.T__159 - 122)) | (1 << (smilesParser.T__160 - 122)) | (1 << (smilesParser.T__161 - 122)) | (1 << (smilesParser.T__162 - 122)) | (1 << (smilesParser.T__163 - 122)) | (1 << (smilesParser.T__164 - 122)) | (1 << (smilesParser.T__165 - 122)) | (1 << (smilesParser.T__166 - 122)) | (1 << (smilesParser.T__167 - 122)) | (1 << (smilesParser.T__168 - 122)) | (1 << (smilesParser.T__169 - 122)) | (1 << (smilesParser.T__170 - 122)) | (1 << (smilesParser.T__171 - 122)) | (1 << (smilesParser.T__172 - 122)) | (1 << (smilesParser.T__173 - 122)) | (1 << (smilesParser.T__174 - 122)) | (1 << (smilesParser.T__175 - 122)) | (1 << (smilesParser.T__176 - 122)) | (1 << (smilesParser.T__177 - 122)) | (1 << (smilesParser.T__178 - 122)) | (1 << (smilesParser.T__179 - 122)) | (1 << (smilesParser.T__180 - 122)) | (1 << (smilesParser.T__181 - 122)) | (1 << (smilesParser.T__182 - 122)) | (1 << (smilesParser.T__183 - 122)) | (1 << (smilesParser.T__184 - 122)))) != 0) or ((((_la - 186)) & ~0x3f) == 0 and ((1 << (_la - 186)) & ((1 << (smilesParser.T__185 - 186)) | (1 << (smilesParser.T__186 - 186)) | (1 << (smilesParser.T__187 - 186)) | (1 << (smilesParser.T__188 - 186)) | (1 << (smilesParser.T__189 - 186)))) != 0):
                self.state = 56
                self.chiral()


            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==smilesParser.T__19:
                self.state = 59
                self.hcount()


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 191)) & ~0x3f) == 0 and ((1 << (_la - 191)) & ((1 << (smilesParser.T__190 - 191)) | (1 << (smilesParser.T__191 - 191)) | (1 << (smilesParser.T__192 - 191)) | (1 << (smilesParser.T__193 - 191)))) != 0):
                self.state = 62
                self.charge()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==smilesParser.T__194:
                self.state = 65
                self.class_()


            self.state = 68
            self.match(smilesParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymbolContext(ParserRuleContext):
